--- a/html/about.html
+++ b/html/about.html
@@ -196,7 +196,7 @@
           <p>
             <span>Brand</span>
             <label class="file">
-              <input type="file" id="form-2--file" aria-label="File browser example">
+              <input type="file" id="form-2--file2" aria-label="File browser example">
               <span class="file-custom"></span>
             </label>
           </p>
