сменил дубли id

--- a/html/about.html
+++ b/html/about.html
@@ -47,7 +47,7 @@
         <p>
           <span class="caption">Brand</span>
           <span class="select">
-            <select name="" id="form-1__select">
+            <select name="form-1__select" id="form-1__select">
               <option class="placeholder" value="selected disabled hidden">Dropdown</option>
               <option value="">option 1</option>
               <option value="">option 2</option>
@@ -79,7 +79,7 @@
         </p>
         <p>
           <span>Brand</span>
-          <textarea name="" id="" cols="30" rows="10" placeholder="Text area"></textarea>
+          <textarea name="form-1__text" id="form-1__text" cols="30" rows="10" placeholder="Text area"></textarea>
         </p>
         <p>
           <span>Brand</span>
@@ -112,7 +112,7 @@
           <p>
             <span class="caption">Brand</span>
             <span class="select">
-              <select name="" id="form-2__select">
+              <select name="form-2.1__select" id="form-2.1__select">
                 <option class="placeholder" value="selected disabled hidden">Dropdown</option>
                 <option value="">option 1</option>
                 <option value="">option 2</option>
@@ -124,18 +124,18 @@
           </p>
           <p class="wrap-chbx">
             <span class="caption">Brand</span>
-            <input id="form-2__chbx-1" type="checkbox">
-            <label for="form-2__chbx-1">Checkbox</label>
+            <input id="form-2.1__chbx-1" type="checkbox">
+            <label for="form-2.1__chbx-1">Checkbox</label>
           </p>
           <p>
             <span>Brand</span>
             <span class="radio-btns">
-              <input id="form-2__radio--1" type="radio" name="form-2__radio">
-              <label for="form-2__radio--1">Option 1</label>
-              <input checked id="form-2__radio--2" type="radio" name="form-2__radio">
-              <label for="form-2__radio--2">Option 2</label>
-              <input id="form-2__radio--3" type="radio" name="form-2__radio">
-              <label for="form-2__radio--3">Option 3</label>
+              <input id="form-2.1__radio--1" type="radio" name="form-2.1__radio">
+              <label for="form-2.1__radio--1">Option 1</label>
+              <input checked id="form-2.1__radio--2" type="radio" name="form-2.1__radio">
+              <label for="form-2.1__radio--2">Option 2</label>
+              <input id="form-2.1__radio--3" type="radio" name="form-2.1__radio">
+              <label for="form-2.1__radio--3">Option 3</label>
             </span>
           </p>
           <p>
@@ -144,12 +144,12 @@
           </p>
           <p>
             <span>Brand</span>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Text area"></textarea>
+            <textarea name="form-2.1__text" id="form-2.1__text" cols="30" rows="10" placeholder="Text area"></textarea>
           </p>
           <p>
             <span>Brand</span>
             <label class="file">
-              <input type="file" id="form-2--file" aria-label="File browser example">
+              <input type="file" id="form-2.1--file" aria-label="File browser example">
               <span class="file-custom"></span>
             </label>
           </p>
@@ -159,7 +159,7 @@
           <p>
             <span class="caption">Brand</span>
             <span class="select">
-              <select name="" id="form-2__select">
+              <select name="form-2.2__select" id="form-2.2__select">
                 <option class="placeholder" value="selected disabled hidden">Dropdown</option>
                 <option value="">option 1</option>
                 <option value="">option 2</option>
@@ -171,18 +171,18 @@
           </p>
           <p class="wrap-chbx">
             <span class="caption">Brand</span>
-            <input id="form-2__chbx-1" type="checkbox">
-            <label for="form-2__chbx-1">Checkbox</label>
+            <input id="form-2.2__chbx-1" type="checkbox">
+            <label for="form-2.2__chbx-1">Checkbox</label>
           </p>
           <p>
             <span>Brand</span>
             <span class="radio-btns">
-              <input id="form-2__radio--1" type="radio" name="form-2__radio">
-              <label for="form-2__radio--1">Option 1</label>
-              <input checked id="form-2__radio--2" type="radio" name="form-2__radio">
-              <label for="form-2__radio--2">Option 2</label>
-              <input id="form-2__radio--3" type="radio" name="form-2__radio">
-              <label for="form-2__radio--3">Option 3</label>
+              <input id="form-2.2__radio--1" type="radio" name="form-2.2__radio">
+              <label for="form-2.2__radio--1">Option 1</label>
+              <input checked id="form-2.2__radio--2" type="radio" name="form-2.2__radio">
+              <label for="form-2.2__radio--2">Option 2</label>
+              <input id="form-2.2__radio--3" type="radio" name="form-2.2__radio">
+              <label for="form-2.2__radio--3">Option 3</label>
             </span>
           </p>
           <p>
@@ -191,12 +191,12 @@
           </p>
           <p>
             <span>Brand</span>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Text area"></textarea>
+            <textarea name="form-2.2__text" id="form-2.2__text" cols="30" rows="10" placeholder="Text area"></textarea>
           </p>
           <p>
             <span>Brand</span>
             <label class="file">
-              <input type="file" id="form-2--file2" aria-label="File browser example">
+              <input type="file" id="form-2.2--file" aria-label="File browser example">
               <span class="file-custom"></span>
             </label>
           </p>
