--- a/html/pricing.html
+++ b/html/pricing.html
@@ -36,18 +36,68 @@
     <p class="close">Close</p>
   </div>
 </header>
-<section class="home">
+<section class="page-3__1">
   <div class="container">
-    <ul class="home-menu">
-      <li><a href=""><img src="../img/add-log.png" alt="">Add log</a></li>
-      <li><a href=""><img src="../img/report.png" alt="">Report</a></li>
-      <li><a href=""><img src="../img/cloud-upload.png" alt="">Upload File</a></li>
-      <li><a href=""><img src="../img/license.svg" alt="">License</a></li>
-      <li><a href=""><img src="../img/settings.png" alt="">Settings</a></li>
-      <li><a href=""><img src="../img/exit.svg" alt="">Exit</a></li>
+    <div class="title">
+      <h2>Heading 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
+    </div>
+    <div class="wrap-table">
+      <table id="table-page-3">
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th>Date</th>
+          <th>Time</th>
+          <th>Cycle ID</th>
+          <th>Chemical Test</th>
+          <th>Sterilizer Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td></td>
+          <td>20.02.2019</td>
+          <td>10:10 am</td>
+          <td>124</td>
+          <td><span class="yes">Yes</span></td>
+          <td>BM_1241351235</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>21.02.2019</td>
+          <td>19:10 am</td>
+          <td>244</td>
+          <td><span class="no">No</span></td>
+          <td>BM_1247543</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>20.02.2019</td>
+          <td>10:10 am</td>
+          <td>124</td>
+          <td><span class="yes">Yes</span></td>
+          <td>BM_1241351235</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>21.02.2019</td>
+          <td>19:10 am</td>
+          <td>244</td>
+          <td><span class="no">No</span></td>
+          <td>BM_1247543</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <ul class="pagination" role="menubar" aria-label="Pagination">
+      <li><a href=""><span>Previous</span></a></li>
+      <li class="current"><a href="">1</a></li>
+      <li><a href="">2</a></li>
+      <li><a href="">3</a></li>
+      <li><a href="">4</a></li>
+      <li><a href=""><span>Next</span></a></li>
     </ul>
-    <p class="home-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-    </p>
   </div>
 </section>
 
