--- a/html/blog.html
+++ b/html/blog.html
@@ -36,18 +36,259 @@
     <p class="close">Close</p>
   </div>
 </header>
-<section class="home">
+<section class="page-4__1">
   <div class="container">
-    <ul class="home-menu">
-      <li><a href=""><img src="../img/add-log.png" alt="">Add log</a></li>
-      <li><a href=""><img src="../img/report.png" alt="">Report</a></li>
-      <li><a href=""><img src="../img/cloud-upload.png" alt="">Upload File</a></li>
-      <li><a href=""><img src="../img/license.svg" alt="">License</a></li>
-      <li><a href=""><img src="../img/settings.png" alt="">Settings</a></li>
-      <li><a href=""><img src="../img/exit.svg" alt="">Exit</a></li>
-    </ul>
-    <p class="home-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-    </p>
+    <div class="title-report">
+      <h2>Report Date</h2>
+      <span class="report-date">###########</span>
+    </div>
+    <!--table-1 --- start ----------->
+    <div class="wrap-table">
+      <table class="table-page-4__1" id="table-page-4__1">
+        <thead>
+        <tr>
+          <th>Document ID</th>
+          <th>Sterilizer Name</th>
+          <th>Sterilizer Model</th>
+          <th>Sterilizer SN</th>
+          <th rowspan="2" class="report-btn"><span><a href="">Operation Signature</a></span></th>
+        </tr>
+        <tr>
+          <td><span>1_10345_235</span></td>
+          <td><span>Midmark A</span></td>
+          <td><span>Midmark M9</span></td>
+          <td><span>112243</span></td>
+        </tr>
+        </thead>
+      </table>
+      <div class="table-page-4__2">
+        <table id="table-page-4__2/1">
+          <tr>
+            <th>Cyle ID</th>
+            <td>232</td>
+          </tr>
+          <tr>
+            <th>Date</th>
+            <td>##################</td>
+          </tr>
+          <tr>
+            <th>Time</th>
+            <td>9:57:00 am</td>
+          </tr>
+        </table>
+        <table id="table-page-4__2/2">
+          <tr>
+            <th>Operator ID</th>
+            <td>stevensa</td>
+          </tr>
+          <tr>
+            <th>Temperature</th>
+            <td>294</td>
+          </tr>
+          <tr>
+            <th>Preassure</th>
+            <td>28.7</td>
+          </tr>
+        </table>
+        <table id="table-page-4__2/3">
+              <tr>
+                <th>Operator Name</th>
+                <td>Allan Stevens</td>
+              </tr>
+              <tr>
+                <th>Chemcial Indicator</th>
+                <td>Yes</td>
+              </tr>
+              <tr>
+                <th>Biological Indicator</th>
+                <td>Positive-Pass</td>
+              </tr>
+            </table>
+      </div>
+      <div class="table-page-4__3">
+        <table id="table-page-4__3/1">
+          <tr>
+            <th>Pouch1</th>
+            <td><span>Exam</span></td>
+          </tr>
+          <tr>
+            <th>Pouch2</th>
+            <td><span>Retractor</span></td>
+          </tr>
+          <tr>
+            <th>Pouch3</th>
+            <td><span>Excavators</span></td>
+          </tr>
+        </table>
+        <table id="table-page-4__3/2">
+          <tr>
+            <th>Pouch4</th>
+            <td><span>Exam</span></td>
+          </tr>
+          <tr>
+            <th>Pouch5</th>
+            <td><span>Retractor</span></td>
+          </tr>
+          <tr>
+            <th>Pouch6</th>
+            <td><span>Excavators</span></td>
+          </tr>
+        </table>
+        <table id="table-page-4__3/3">
+          <tr>
+            <th>Pouch7</th>
+            <td><span>Exam</span></td>
+          </tr>
+          <tr>
+            <th>Pouch8</th>
+            <td><span>Retractor</span></td>
+          </tr>
+          <tr>
+            <th>Pouch9</th>
+            <td><span>Excavators</span></td>
+          </tr>
+        </table>
+        <table id="table-page-4__3/4">
+          <tr>
+            <th>Pouch10</th>
+            <td><span></span></td>
+          </tr>
+          <tr>
+            <th>Pouch11</th>
+            <td><span></span></td>
+          </tr>
+          <tr>
+            <th>Pouch12</th>
+            <td><span></span></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!--table-1 --- end ----------->
+    
+    <!--table-2 --- start ----------->
+    <div class="wrap-table">
+      <table class="table-page-4__1" id="table-page-4/2__1">
+        <thead>
+        <tr>
+          <th>Document ID</th>
+          <th>Sterilizer Name</th>
+          <th>Sterilizer Model</th>
+          <th>Sterilizer SN</th>
+          <th rowspan="2" class="report-btn"><span><a href="">Operation Signature</a></span></th>
+        </tr>
+        <tr>
+          <td><span>1_10345_235</span></td>
+          <td><span>Midmark A</span></td>
+          <td><span>Midmark M9</span></td>
+          <td><span>112243</span></td>
+        </tr>
+        </thead>
+      </table>
+      <div class="table-page-4__2">
+        <table id="table-page-4/2__2/1">
+          <tr>
+            <th>Cyle ID</th>
+            <td>232</td>
+          </tr>
+          <tr>
+            <th>Date</th>
+            <td>##################</td>
+          </tr>
+          <tr>
+            <th>Time</th>
+            <td>9:57:00 am</td>
+          </tr>
+        </table>
+        <table id="table-page-4/2__2/2">
+          <tr>
+            <th>Operator ID</th>
+            <td>stevensa</td>
+          </tr>
+          <tr>
+            <th>Temperature</th>
+            <td>294</td>
+          </tr>
+          <tr>
+            <th>Preassure</th>
+            <td>28.7</td>
+          </tr>
+        </table>
+        <table id="table-page-4/2__2/3">
+          <tr>
+            <th>Operator Name</th>
+            <td>Allan Stevens</td>
+          </tr>
+          <tr>
+            <th>Chemcial Indicator</th>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <th>Biological Indicator</th>
+            <td>Positive-Pass</td>
+          </tr>
+        </table>
+      </div>
+      <div class="table-page-4__3">
+        <table id="table-page-4/2__3/1">
+          <tr>
+            <th>Pouch1</th>
+            <td><span>Exam</span></td>
+          </tr>
+          <tr>
+            <th>Pouch2</th>
+            <td><span>Retractor</span></td>
+          </tr>
+          <tr>
+            <th>Pouch3</th>
+            <td><span>Excavators</span></td>
+          </tr>
+        </table>
+        <table id="table-page-4/2__3/2">
+          <tr>
+            <th>Pouch4</th>
+            <td><span>Exam</span></td>
+          </tr>
+          <tr>
+            <th>Pouch5</th>
+            <td><span>Retractor</span></td>
+          </tr>
+          <tr>
+            <th>Pouch6</th>
+            <td><span>Excavators</span></td>
+          </tr>
+        </table>
+        <table id="table-page-4/2__3/3">
+          <tr>
+            <th>Pouch7</th>
+            <td><span>Exam</span></td>
+          </tr>
+          <tr>
+            <th>Pouch8</th>
+            <td><span>Retractor</span></td>
+          </tr>
+          <tr>
+            <th>Pouch9</th>
+            <td><span>Excavators</span></td>
+          </tr>
+        </table>
+        <table id="table-page-4/2__3/4">
+          <tr>
+            <th>Pouch10</th>
+            <td><span></span></td>
+          </tr>
+          <tr>
+            <th>Pouch11</th>
+            <td><span></span></td>
+          </tr>
+          <tr>
+            <th>Pouch12</th>
+            <td><span></span></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!--table-2 --- end ----------->
   </div>
 </section>
 
