--- a/html/blog.html
+++ b/html/blog.html
@@ -345,8 +345,8 @@
               <td><span>1_10345_235</span></td>
             </tr>
             <tr>
-              <th>Chamical pass: <span class="indicator"></span></th>
-              <th>Biological indicate: <span class="indicator"><img src="../img/vector-smart-object.png" alt=""></span></th>
+              <th class="indicator">Chamical pass: <span><i class="check grey"></i></span></th>
+              <th class="indicator">Biological indicate: <span><img src="../img/vector-smart-object.png" alt=""></span></th>
               <th></th>
               <th></th>
               <th></th>
