--- a/html/blog.html
+++ b/html/blog.html
@@ -92,19 +92,19 @@
           </tr>
         </table>
         <table id="table-page-4__2/3">
-              <tr>
-                <th>Operator Name</th>
-                <td>Allan Stevens</td>
-              </tr>
-              <tr>
-                <th>Chemcial Indicator</th>
-                <td>Yes</td>
-              </tr>
-              <tr>
-                <th>Biological Indicator</th>
-                <td>Positive-Pass</td>
-              </tr>
-            </table>
+          <tr>
+            <th>Operator Name</th>
+            <td>Allan Stevens</td>
+          </tr>
+          <tr>
+            <th>Chemcial Indicator</th>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <th>Biological Indicator</th>
+            <td>Positive-Pass</td>
+          </tr>
+        </table>
       </div>
       <div class="table-page-4__3">
         <table id="table-page-4__3/1">
@@ -290,7 +290,7 @@
       </div>
     </div>
     <!--table-2 --- end ----------->
-    
+  
   </div>
 </section>
 
@@ -346,15 +346,37 @@
             </tr>
             <tr>
               <th class="indicator">Chamical pass: <span><i class="check grey"></i></span></th>
-              <th class="indicator">Biological indicate: <span><img src="../img/vector-smart-object.png" alt=""></span></th>
+              <th class="indicator">Biological indicate: <span><img src="../img/vector-smart-object.png" alt=""></span>
+              </th>
               <th></th>
               <th></th>
               <th></th>
             </tr>
           </table>
           <div class="btns">
-            <a href="javascript:void(0);" class="close-modal btn">Close</a>
-            <a href="javascript:void(0);" class="btn">Detail</a>
+            <a href="javascript:void(0);" class="close-modal btn"><svg enable-background="new 0 0 32 32" height="32px" id="Слой_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path clip-rule="evenodd" d="M31.106,15H3.278l8.325-8.293  c0.391-0.391,0.391-1.024,0-1.414c-0.391-0.391-1.024-0.391-1.414,0l-9.9,9.899c-0.385,0.385-0.385,1.029,0,1.414l9.9,9.9  c0.391,0.391,1.024,0.391,1.414,0c0.391-0.391,0.391-1.024,0-1.414L3.278,17h27.828c0.552,0,1-0.448,1-1  C32.106,15.448,31.658,15,31.106,15z" fill="#ffffff" fill-rule="evenodd" id="Arrow_Back"/><g/><g/><g/><g/><g/><g/></svg>
+              Close</a>
+            <a href="javascript:void(0);" class="btn search">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<g>
+	<g>
+		<path d="M370.068,63.494C329.123,22.549,274.686,0,216.781,0S104.438,22.549,63.494,63.494C22.549,104.438,0,158.876,0,216.78
+			c0,57.905,22.549,112.343,63.494,153.287c40.944,40.944,95.383,63.494,153.287,63.494s112.342-22.55,153.287-63.494
+			c40.944-40.944,63.494-95.382,63.494-153.287C433.561,158.876,411.012,104.438,370.068,63.494z M216.78,392.196
+			c-96.725,0-175.416-78.691-175.416-175.416S120.056,41.364,216.781,41.364s175.415,78.691,175.415,175.416
+			S313.505,392.196,216.78,392.196z"/>
+	</g>
+</g>
+<g>
+	<g>
+		<path d="M505.943,476.693L369.981,340.732c-8.077-8.077-21.172-8.077-29.249,0c-8.076,8.077-8.076,21.172,0,29.249
+			l135.961,135.961c4.038,4.039,9.332,6.058,14.625,6.058c5.293,0,10.587-2.019,14.625-6.058
+			C514.019,497.865,514.019,484.77,505.943,476.693z"/>
+	</g>
+</g>
+</svg>
+            Detail</a>
           </div>
         </div>
       </div>
