адаптировал всё, попап только под айпад

--- a/html/about.html
+++ b/html/about.html
@@ -29,11 +29,11 @@
         <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
-  </div>
-  <div class="hamburger">
-    <span></span> <span></span> <span></span>
-    <p class="menu">Menu</p>
-    <p class="close">Close</p>
+    <div class="hamburger">
+      <span></span> <span></span> <span></span>
+      <p class="menu">Menu</p>
+      <p class="close">Close</p>
+    </div>
   </div>
 </header>
 <section class="page-2__1">
@@ -63,7 +63,7 @@
           <label for="form-1__chbx-1">Checkbox</label>
         </p>
         <p>
-          <span>Brand</span>
+          <span class="caption">Brand</span>
           <span class="radio-btns">
             <input id="form-1__radio--1" type="radio" name="form-1__radio">
             <label for="form-1__radio--1">Option 1</label>
@@ -74,15 +74,15 @@
           </span>
         </p>
         <p>
-          <span>Brand</span>
+          <span class="caption">Brand</span>
           <input type="text" placeholder="Text input">
         </p>
         <p>
-          <span>Brand</span>
+          <span class="caption">Brand</span>
           <textarea name="form-1__text" id="form-1__text" cols="30" rows="10" placeholder="Text area"></textarea>
         </p>
         <p>
-          <span>Brand</span>
+          <span class="caption">Brand</span>
           <label class="file">
             <input type="file" id="form-1--file" aria-label="File browser example">
             <span class="file-custom"></span>
