--- a/html/blog.html
+++ b/html/blog.html
@@ -29,11 +29,11 @@
         <li><a class="active" href="#">Blog</a></li>
       </ul>
     </nav>
-  </div>
-  <div class="hamburger">
-    <span></span> <span></span> <span></span>
-    <p class="menu">Menu</p>
-    <p class="close">Close</p>
+    <div class="hamburger">
+      <span></span> <span></span> <span></span>
+      <p class="menu">Menu</p>
+      <p class="close">Close</p>
+    </div>
   </div>
 </header>
 <section class="page-4__1">
@@ -45,23 +45,43 @@
     
     <!--table-1 --- start ----------->
     <div class="wrap-table">
-      <table class="table-page-4__1" id="table-page-4__1">
-        <thead>
-        <tr>
-          <th>Document ID</th>
-          <th>Sterilizer Name</th>
-          <th>Sterilizer Model</th>
-          <th>Sterilizer SN</th>
-          <th rowspan="2" class="report-btn"><span><a href="javascript:void(0);">Operation Signature</a></span></th>
-        </tr>
-        <tr>
-          <td><span>1_10345_235</span></td>
-          <td><span>Midmark A</span></td>
-          <td><span>Midmark M9</span></td>
-          <td><span>112243</span></td>
-        </tr>
-        </thead>
-      </table>
+      <div class="table-page-4__1">
+        <div class="table-body">
+          <table id="table-page-4__1/1">
+            <tr>
+              <th>Document ID</th>
+            </tr>
+            <tr>
+              <td><span>1_10345_235</span></td>
+            </tr>
+          </table>
+          <table id="table-page-4__1/2">
+            <tr>
+              <th>Sterilizer Model</th>
+            </tr>
+            <tr>
+              <td><span>Midmark M9</span></td>
+            </tr>
+          </table>
+          <table id="table-page-4__1/3">
+            <tr>
+              <th>Sterilizer Name</th>
+            </tr>
+            <tr>
+              <td><span>Midmark A</span></td>
+            </tr>
+          </table>
+          <table id="table-page-4__1/4">
+            <tr>
+              <th>Sterilizer SN</th>
+            </tr>
+            <tr>
+              <td><span>112243</span></td>
+            </tr>
+          </table>
+        </div>
+        <a class="report-btn" href="javascript:void(0);">Operation Signature</a>
+      </div>
       <div class="table-page-4__2">
         <table id="table-page-4__2/1">
           <tr>
@@ -169,23 +189,44 @@
     
     <!--table-2 --- start ----------->
     <div class="wrap-table">
-      <table class="table-page-4__1" id="table-page-4/2__1">
-        <thead>
-        <tr>
-          <th>Document ID</th>
-          <th>Sterilizer Name</th>
-          <th>Sterilizer Model</th>
-          <th>Sterilizer SN</th>
-          <th rowspan="2" class="report-btn"><span><a href="javascript:void(0);">Operation Signature</a></span></th>
-        </tr>
-        <tr>
-          <td><span>1_10345_235</span></td>
-          <td><span>Midmark A</span></td>
-          <td><span>Midmark M9</span></td>
-          <td><span>112243</span></td>
-        </tr>
-        </thead>
-      </table>
+      <div class="table-page-4__1" id="table-page-4/2__1">
+        <div class="table-body">
+          <table id="table-page-4/2__1/1">
+            <tr>
+              <th>Document ID</th>
+            </tr>
+            <tr>
+              <td><span>1_10345_235</span></td>
+            </tr>
+          </table>
+          <table id="table-page-4/2__1/2">
+            <tr>
+              <th>Sterilizer Model</th>
+            </tr>
+            <tr>
+              <td><span>Midmark M9</span></td>
+            </tr>
+          </table>
+          <table id="table-page-4/2__1/3">
+            <tr>
+              <th>Sterilizer Name</th>
+            </tr>
+            <tr>
+              <td><span>Midmark A</span></td>
+            </tr>
+          </table>
+          <table id="table-page-4/2__1/4">
+            <tr>
+              <th>Sterilizer SN</th>
+            </tr>
+            <tr>
+              <td><span>112243</span></td>
+            </tr>
+          </table>
+        </div>
+        <a class="report-btn" href="javascript:void(0);">Operation Signature</a>
+      </div>
+  
       <div class="table-page-4__2">
         <table id="table-page-4/2__2/1">
           <tr>
