--- a/html/blog.html
+++ b/html/blog.html
@@ -345,59 +345,87 @@
           <h2>Title</h2>
         </div>
         <div class="modal-table">
-          <table>
-            <tr>
-              <th>Document ID:</th>
-              <th>Cycle ID:</th>
-              <th>Serilizator name:</th>
-              <th>Model:</th>
-              <th>Serial:</th>
-            <tr>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-            </tr>
-            <tr>
-              <th>Operator ID:</th>
-              <th>Operator name:</th>
-              <th>Serilizator name:</th>
-              <th>Serilizator name:</th>
-              <th>Serilizator name:</th>
-            <tr>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-            </tr>
-            <tr>
-              <th>Serilizator name:</th>
-              <th>Serilizator name:</th>
-              <th>Serilizator name:</th>
-              <th>Serilizator name:</th>
-              <th>Serilizator name:</th>
-            <tr>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-              <td><span>1_10345_235</span></td>
-            </tr>
-            <tr>
-              <th class="indicator">Chamical pass: <span><i class="check grey"></i></span></th>
-              <th class="indicator">Biological indicate: <span><img src="../img/vector-smart-object.png" alt=""></span>
-              </th>
-              <th></th>
-              <th></th>
-              <th></th>
-            </tr>
-          </table>
-          <div class="btns">
-            <a href="javascript:void(0);" class="close-modal btn"><svg enable-background="new 0 0 32 32" height="32px" id="Слой_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path clip-rule="evenodd" d="M31.106,15H3.278l8.325-8.293  c0.391-0.391,0.391-1.024,0-1.414c-0.391-0.391-1.024-0.391-1.414,0l-9.9,9.899c-0.385,0.385-0.385,1.029,0,1.414l9.9,9.9  c0.391,0.391,1.024,0.391,1.414,0c0.391-0.391,0.391-1.024,0-1.414L3.278,17h27.828c0.552,0,1-0.448,1-1  C32.106,15.448,31.658,15,31.106,15z" fill="#ffffff" fill-rule="evenodd" id="Arrow_Back"/><g/><g/><g/><g/><g/><g/></svg>
-              Close</a>
-            <a href="javascript:void(0);" class="btn search">
+          <div class="wrap-table">
+            <table id="table-modal-1">
+              <tr>
+                <th>Document ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Cycle ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Serilizator name:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+            </table>
+            <table id="table-modal-2">
+              <tr>
+                <th>Document ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Cycle ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Serilizator name:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+            </table>
+            <table id="table-modal-3">
+              <tr>
+                <th>Document ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Cycle ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Serilizator name:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+            </table>
+            <table id="table-modal-4">
+              <tr>
+                <th>Document ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Cycle ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Serilizator name:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+            </table>
+            <table id="table-modal-5">
+              <tr>
+                <th>Document ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Cycle ID:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+              <tr>
+                <th>Serilizator name:</th>
+                <td><span>1_10345_235</span></td>
+              </tr>
+            </table>
+            <ul class="indicators">
+              <li class="indicators__item">Chamical pass: <span><i class="check grey"></i></span></li>
+              <li class="indicators__item">Biological indicate: <span><img src="../img/vector-smart-object.png" alt=""></span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="btns">
+          <a href="javascript:void(0);" class="close-modal btn"><svg enable-background="new 0 0 32 32" height="32px" id="Слой_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path clip-rule="evenodd" d="M31.106,15H3.278l8.325-8.293  c0.391-0.391,0.391-1.024,0-1.414c-0.391-0.391-1.024-0.391-1.414,0l-9.9,9.899c-0.385,0.385-0.385,1.029,0,1.414l9.9,9.9  c0.391,0.391,1.024,0.391,1.414,0c0.391-0.391,0.391-1.024,0-1.414L3.278,17h27.828c0.552,0,1-0.448,1-1  C32.106,15.448,31.658,15,31.106,15z" fill="#ffffff" fill-rule="evenodd" id="Arrow_Back"/><g/><g/><g/><g/><g/><g/></svg>
+            Close</a>
+          <a href="javascript:void(0);" class="btn search">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <g>
@@ -418,7 +446,6 @@
 </g>
 </svg>
             Detail</a>
-          </div>
         </div>
       </div>
     </div><!-- content -->
